--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               exposição artística om obras de Clóvis Júnior de Danielle
               Travassos, além de um bate-papo com Sandra Moura, ...</span
             >
-            <!-- <button class="button-projetos-card-big"><img src="../assets/arrow.svg" alt="">Leia mais</button> -->
+            <button class="button-projetos-card-big"><img src="../assets/arrow.svg" alt="">Leia mais</button>
           </div>
         </div>
 
@@ -311,7 +311,7 @@
                 tona e com eles diversas soluções, principalmente no quesito
                 sustentabilidade e no tempo de edificação. Quando antes
               </p>
-              <!-- <button class="button-projetos"> <img src="../assets/arrow.png" alt="">Leia mais</button> -->
+              <button class="button-projetos"> <img src="../assets/arrow.png" alt="">Leia mais</button>
             </div>
           </div>
 
@@ -330,7 +330,7 @@
                 tona e com eles diversas soluções, principalmente no quesito
                 sustentabilidade e no tempo de edificação. Quando antes
               </p>
-              <!-- <button class="button-projetos"> <img src="../assets/arrow.png" alt="">Leia mais</button> -->
+              <button class="button-projetos"> <img src="../assets/arrow.png" alt="">Leia mais</button>
             </div>
           </div>
         </div>
