--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
                   <a class="section-footer-two-text"  href="">HUB</a> -->
             <a class="section-footer-two-text" href="">Conteúdos</a>
             <!-- <a class="section-footer-two-text"  href="">Contato</a>    -->
+            <!-- <a class="section-footer-two-text" >Política e Privacidade</a> -->
           </div>
           <div class="conext-social">
             <div class="conext-social-text">
